@@ -1,2 +1,2 @@
-pnm://raarcabk001.broadcast.com/books/Science/character1a.ra?StreamID=15&ru=Wget/1RUPERIOD5RUPERIOD3&s=78015247
+;pnm://raarcabk001.broadcast.com/books/Science/character1a.ra?StreamID=15&ru=Wget/1RUPERIOD5RUPERIOD3&s=78015247
 pnm://raarcabk001.broadcast.com/books/Science/character2a.ra?StreamID=16&ru=Wget/1RUPERIOD5RUPERIOD3&s=78015247
